rendering diff btw dev and prod RESOLVED Turbopack in package.json deleted CSS logo-wrap / menu-link / :before adjusted Police color modified in HorizontalBand and Hero

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -229,7 +229,7 @@
 
   /* Styles pour le menu */
   .menu-link__label {
-    color: --text;
+    color: var(--text);
     font-weight: 700;
     font-size: 12px;
   }
@@ -251,7 +251,8 @@
     display: inline-block;
     width: 1px;
     height: 26px;
-    margin-right: 16px;
+    margin-left: 205px;
+    margin-top: 100px;
     vertical-align: middle;
     background: #919795;
     animation: menuBarIn .45s cubic-bezier(.25,.46,.45,.94) .3s backwards
@@ -263,7 +264,10 @@
     left: 25;
     width: 100%;
     height: 100%;
-    z-index: 2
+    z-index: 2;
+    margin-left: 170px;
+    margin-top: 100px;
+
   }
 
   /* Flyout menu */
@@ -316,7 +320,7 @@
   .hire-me {
     position: fixed;
     right: 65px;
-    color: --text;
+    color: var(--text);
     font-weight: 700;
     font-size: 12px;
     top: 70px;
@@ -356,6 +360,8 @@
     width: 100%;
     top: 25;
     left: 70px;
+    margin-top: 96px;
+    margin-left: 40px;
   }
 
   @media(min-width: 512px) {
@@ -378,7 +384,9 @@
     top: 0;
     left: 0;
     right: 0;
-    bottom: 0
+    bottom: 0;
+    margin-left: 10px;
+
   }
 
   .logo-wrap svg {
